# Spinguin

./: .buildinfo  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  index.html  installation.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  spinguin.api.html  spinguin.api.relaxation_properties.html  spinguin.core.chem.html  spinguin.core.hide_prints.html  spinguin.core.intersect_indices.html  spinguin.core.propagation.html  spinguin.core.sparse_dot.html  spinguin.core.states.html  spinguin.core.superoperators.html  version_switcher.json
.github/: Copilot.instructions.md
0.0.1/: .buildinfo  advanced.html  basics.html  genindex.html  index.html  installation.html  py-modindex.html  search.html  searchindex.js  spinguin.api.basis.html  spinguin.api.html  spinguin.api.parameters.html  spinguin.api.relaxation_properties.html  spinguin.core.basis.html  spinguin.core.chem.html  spinguin.core.data_io.html  spinguin.core.hamiltonian.html  spinguin.core.hide_prints.html  spinguin.core.html  spinguin.core.intersect_indices.html  spinguin.core.la.html  spinguin.core.liouvillian.html  spinguin.core.nmr_isotopes.html  spinguin.core.operators.html  spinguin.core.propagation.html  spinguin.core.relaxation.html  spinguin.core.sparse_dot.html  spinguin.core.specutils.html  spinguin.core.states.html  spinguin.core.superoperators.html  spinguin.html
0.0.2/: .buildinfo  basics.html  genindex.html  index.html  installation.html  internals.html  objects.inv  py-modindex.html  search.html  searchindex.js  sequences.html  spinguin.html
0.0.3/: .buildinfo  basics.html  genindex.html  index.html  installation.html  internals.html  objects.inv  py-modindex.html  search.html  searchindex.js  sequences.html  spinguin.html
0.0.4/: .buildinfo  basics.html  genindex.html  index.html  installation.html  internals.html  py-modindex.html  search.html  searchindex.js  sequences.html  spinguin.html
0.1.0/: .buildinfo  basics.html  genindex.html  index.html  installation.html  internals.html  py-modindex.html  search.html  sequences.html  spinguin.html
0.1.1/: .buildinfo  basics.html  genindex.html  index.html  installation.html  internals.html  objects.inv  py-modindex.html  search.html  searchindex.js  sequences.html  (+1 more)
(+520 files in other folders)
