[project]
name = "spinguin"
version = "0.0.1"
dependencies = ["numpy >= 1.26.4", "scipy >= 1.14.1", "sympy >= 1.13.1"]
requires-python = ">=3.11"
authors = [
    {name = "Joni Eronen", email = "joni.eronen@oulu.fi"},
    {name = "Perttu Hilla", email = "perttu.hilla@oulu.fi"}
]
description = "Spinguin is an intuitive Python package for versatile numerical spin-dynamics simulations."
readme = "README.md"
license = {file = "LICENSE"}

[project.optional-dependencies]
dev = ["cython >= 3.0.11", "build", "setuptools"]

[build-system]
requires = ["setuptools>=74.1", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"