[project]
name = "spinguin"
version = "0.2.0"
dependencies = ["numpy >= 2.0.0", "scipy >= 1.14.1", "sympy >= 1.13.1"]
requires-python = ">=3.11"
authors = [
    {name = "Joni Eronen", email = "joni.eronen@oulu.fi"},
    {name = "Perttu Hilla", email = "perttu.hilla@oulu.fi"}
]
description = "Spinguin is an intuitive Python package for versatile numerical spin-dynamics simulations."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

[build-system]
requires = ["setuptools>=74.1", "wheel", "cython >= 3.0.11", "numpy >= 2.0.0", "cibuildwheel"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = ["*-win32"]
test-command = "python -m unittest discover {project}/tests"